Changed color scheme

--- a/style.css
+++ b/style.css
@@ -43,13 +43,14 @@ h1 {
 }
 
 h2 {
-    font-size: 2.0rem; /* = 20px */
+    font-size: 2.5rem; /* = 25px */
     padding-bottom: 3rem;
 }
 
 h3 {
     padding-left: 3rem;
-    font-size: 1.6rem; /* = 16px */
+    font-size: 2.0rem; /* = 20px */
+    font-weight: bold;
 }
 
 h4, h5, h6 {
@@ -64,11 +65,11 @@ h5 {
 
 #u {
     text-decoration: none;
-    border-bottom: 0.2rem solid #03A9F4;
+    border-bottom: 0.2rem solid #feca07;
 }
 
 em {
-    color: #03A9F4;
+    color: #feca07;
 }
 
 p{
@@ -80,13 +81,14 @@ p{
 }
 
 .fa-dot-circle, .fa-circle, .fa-graduation-cap, .fa-briefcase, .fa-pencil-alt {
-    color: #03A9F4;
+    color: #feca07;
+    padding-right: 1rem;
 }
 
 hr {
     width: 100%;
     margin-bottom: 3rem;
-    color: #03A9F4;
+    color: #feca07;
 }
 
 #loisirs {
@@ -105,7 +107,7 @@ hr {
     }
     
     aside {
-        background-color: #03A9F4;
+        background-color: #feca07;
     }
     
     img {
@@ -120,8 +122,8 @@ hr {
     .subsection {
         display: block;
         text-align: center;
-        color: #03A9F4;
-        background-color: #424242;
+        color: #feca07;
+        background-color: #404040;
         padding: 0.5em;
     }
     
