--- a/style.css
+++ b/style.css
@@ -33,8 +33,8 @@ blockquote:before, blockquote:after, q:before, q:after {
     content: none;
 }
 
-h1, h2, h3, h4, h5, h6 {
-    font-weight: bold;
+h1, h2, h3, h4, h5, h6, aside, .date {
+    font-weight: bolder;
 }
 
 h1 {
@@ -50,10 +50,13 @@ h2 {
 h3 {
     padding-left: 3rem;
     font-size: 2.0rem; /* = 20px */
-    font-weight: bold;
 }
 
-h4, h5, h6 {
+h4{
+    font-size: 1.8rem; /* = 18px */
+}
+
+h5, h6 {
     font-size: 1.4rem; /* = 14px */
 }
 
@@ -149,7 +152,6 @@ hr {
 
     .date {
         display: flex;
-        font-weight: bold;
     }
 
     h1 {
