--- a/style.css
+++ b/style.css
@@ -94,6 +94,8 @@ h5 {
 
 hr {
     width: 100%;
+    height: 0.2rem;
+    border: none;
     margin-bottom: 3rem;
 }
 
@@ -128,7 +130,7 @@ em, hr, .subsection, .fa-dot-circle, .fa-circle, .fa-graduation-cap, .fa-briefca
     color: #4DB6AC;
 }
 
-aside {
+aside, hr {
     background-color: #4DB6AC;
 }
 
