--- a/style.css
+++ b/style.css
@@ -174,6 +174,8 @@ a:hover {
         padding: 3em;
         display: block;
         border-radius: 50%;
+        object-fit: cover;
+        object-position: top;
     }
     
     .subsection {
@@ -184,7 +186,6 @@ a:hover {
     
     .text-subsection {
         padding: 2rem;
-        text-align: justify;
     }
 
     .text-subsection > p {
